# find-ellipsoid

./: CMakeLists.txt  README.md  main.cpp
